# VirtualTouchPadAndroid

./: CMakeLists.txt  main.cpp  serverconfig.cpp  serverconfig.h  startscreen.cpp  touchPad.h  touchscreen.cpp
android/: AndroidManifest.xml
